Fix iOS safe area spacing

--- a/src/Home/Home/styles.scss
+++ b/src/Home/Home/styles.scss
@@ -44,6 +44,7 @@
   }
 
   ion-content {
+    --padding-top: env(safe-area-inset-top) !important;
     --overflow: hidden;
 
     ion-list {
